# Yuan

./: .all-contributorsrc  .gitattributes  .gitignore  .prettierignore  .prettierrc.js  AGENTS.md  IMPLEMENTATION_PLAN.md  LICENSE  README-zh-Hans.md  README.md  README.zh-Hans.md  rush.json  signal-trader-rfc-v1-事件溯源重排版.md
.claude/: settings.local.json
.clinerules/: credential.md  general.md  sql.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml  feature_request.yaml
.github/workflows/: README-daily-git-report.md  bump-version.yml  ci.yml  daily-git-report.yml  release.yml
.legion/: config.json  ledger.csv  playbook.md
.opencode/plans/: 1773751421023-tidy-meadow.md  1774098578691-glowing-eagle.md
apps/: AGENTS.md
apps/account-composer/: CHANGELOG.json  CHANGELOG.md  package.json
apps/agent/: CHANGELOG.json  CHANGELOG.md  package.json
apps/alert-receiver/: CHANGELOG.json  CHANGELOG.md  README.md  package.json  tsconfig.json
apps/app-openai/: CHANGELOG.json  CHANGELOG.md  package.json
apps/asg-eventbridge-notifier/: CHANGELOG.json  CHANGELOG.md  package.json  tsconfig.json
apps/data-collector/: CHANGELOG.json  CHANGELOG.md  package.json
apps/email-notifier/: CHANGELOG.json  CHANGELOG.md  package.json
apps/feishu-notifier/: CHANGELOG.json  CHANGELOG.md  package.json  tsconfig.json
apps/fund/: CHANGELOG.json  CHANGELOG.md  package.json
apps/general-data-source/: CHANGELOG.json  CHANGELOG.md  package.json
apps/general-realtime-data-source/: CHANGELOG.json  CHANGELOG.md  package.json
apps/host/: CHANGELOG.json  CHANGELOG.md  README.md  package.json
apps/hosts/: CHANGELOG.json  CHANGELOG.md  package.json
apps/http-proxy/: CHANGELOG.json  CHANGELOG.md  package.json  tsconfig.json
apps/k8s-manifest-operator/: CHANGELOG.json  CHANGELOG.md  package.json  test.js
apps/market-data-collector/: CHANGELOG.json  CHANGELOG.md  package.json
apps/metrics-collector/: CHANGELOG.json  CHANGELOG.md  package.json
apps/mongodb-storage/: CHANGELOG.json  CHANGELOG.md  package.json
apps/namespaced-mongodb-storage/: CHANGELOG.json  CHANGELOG.md  package.json  tsconfig.json
apps/node-unit/: AGENTS.md  CHANGELOG.json  CHANGELOG.md  DAEMON_SELECTOR_IMPLEMENTATION.md  LOG_ROTATION_DESIGN.md  README.md  SESSION_NOTES.md  dashboard-node-unit-deployment.json  monitoring.md  package.json
apps/portal/: CHANGELOG.json  CHANGELOG.md  package.json
apps/postgres-storage/: CHANGELOG.json  CHANGELOG.md  README.md  package.json
apps/prometheus-client/: CHANGELOG.json  CHANGELOG.md  package.json  tsconfig.json
apps/prometheus-rule-controller/: CHANGELOG.json  CHANGELOG.md  package.json
apps/request-emitter/: CHANGELOG.json  CHANGELOG.md  package.json
apps/risk-manager/: CHANGELOG.json  CHANGELOG.md  package.json
apps/series-collector/: CHANGELOG.json  CHANGELOG.md  package.json
apps/shared-host/: CHANGELOG.json  CHANGELOG.md  package.json
apps/signal-trader/: GUIDE.md  README.md  package.json
apps/telegram-monitor/: CHANGELOG.json  CHANGELOG.md  package.json
apps/trade-copier/: CHANGELOG.json  CHANGELOG.md  README.md  package.json
apps/transfer-controller/: CHANGELOG.json  CHANGELOG.md  package.json
apps/twitter-monitor/: CHANGELOG.json  CHANGELOG.md  package.json
apps/vendor-aster/: AGENTS.md  CHANGELOG.json  CHANGELOG.md  SESSION_NOTES.md  package.json
apps/vendor-binance/: AGENTS.md  CHANGELOG.json  CHANGELOG.md  SESSION_NOTES.md  package.json
apps/vendor-bitget/: AGENTS.md  CHANGELOG.json  CHANGELOG.md  README.md  SESSION_NOTES.md  package.json
apps/vendor-ccxt/: CHANGELOG.json  CHANGELOG.md  package.json  tsconfig.json
apps/vendor-coinex/: CHANGELOG.json  CHANGELOG.md  package.json
apps/vendor-ctp/: .gitattributes  .gitignore  CHANGELOG.json  CHANGELOG.md  README.md  package.json
apps/vendor-ctp/ctp/: CMakeLists.txt
apps/vendor-ctp/ctp/include/: NTNL-CTP-Bridge-Interface.GENERATED.hpp  NTNL-CTP-Md-Bridge-Interface.GENERATED.hpp  ThostFtdcMdApi.h  ThostFtdcTraderApi.h  ThostFtdcUserApiDataType.h  ThostFtdcUserApiStruct.h  error.xml
apps/vendor-ctp/ctp/scripts/: build-variants.sh
apps/vendor-ctp/ctp/src/: NTNL-CTP-Bridge-Implementation.GENERATED.cpp  NTNL-CTP-Md-Bridge-Implementation.GENERATED.cpp  main.cpp
apps/vendor-deepcoin/: CHANGELOG.json  CHANGELOG.md  package.json
apps/vendor-gate/: AGENTS.md  CHANGELOG.json  CHANGELOG.md  IMPLEMENTATION_PLAN.md  README.md  SESSION_NOTES.md  package.json
apps/vendor-huobi/: CHANGELOG.json  CHANGELOG.md  README.md  package.json
apps/vendor-hyperliquid/: AGENTS.md  CHANGELOG.json  CHANGELOG.md  SESSION_NOTES.md  package.json  tsconfig.json
apps/vendor-okx/: CHANGELOG.json  CHANGELOG.md  README.md  package.json
apps/vendor-okx-web3/: CHANGELOG.json  CHANGELOG.md  package.json
apps/vendor-solana/: CHANGELOG.json  CHANGELOG.md  package.json
apps/vendor-solscan/: CHANGELOG.json  CHANGELOG.md  package.json
apps/vendor-tq/: CHANGELOG.json  CHANGELOG.md  package.json  tsconfig.json
apps/vendor-trading-view/: CHANGELOG.json  CHANGELOG.md  package.json  tsconfig.json
apps/vendor-turboflow/: CHANGELOG.json  CHANGELOG.md  README.md  api-extractor.json  package.json  tsconfig.json
apps/virtual-exchange/: CHANGELOG.json  CHANGELOG.md  package.json
common/git-hooks/: pre-commit
common/scripts/: prune-cache.js
distributions/origin/: .gitignore  CHANGELOG.json  CHANGELOG.md  global.d.ts  package.json  tsconfig.json  ui-web.generated.d.ts
docs/en/: 2023-11-17-do-we-really-need-python-for-quant.md  2024-04-17-vision-of-no-trade-no-life.md  README.md  agents.md  architecture-overview.md  data-collection.md  data-modeling.md  database.md  deployment.md  development.md  distributions.md  documentation.md  intro.md  miscellaneous.md  monitoring-alerting.md  motivation.md  rpc-framework.md  service-providers.md  (+3 more)
libraries/: AGENTS.md
package/: package.json
reports/: node-unit-portal-resource-usage-e2e-report.md
scripts/: detect-sql-migration-changes.sh  e2e-node-unit-failover.sh  fix-doc-links.py  sync-package-docs.py
supabase/: config.toml
tools/: AGENTS.md
(+5003 files in other folders)
